<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <DUT Name="DataDrill" Id="{3e03312b-5661-4ee6-9665-6125182d895f}">
    <Declaration><![CDATA[TYPE DataDrill :
STRUCT
	
	OUT	:	OUTPUT;
	IN	:	INPUT;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>